<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.MapFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_map_fragment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_map_music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_rectangle"
        android:text="@string/main_map_musicButtonText"
        android:textColor="@color/color_font_white"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_map_startRun"
        android:layout_width="@dimen/fab_size"
        android:layout_height="@dimen/fab_size"
        android:layout_marginBottom="@dimen/fab_marginBottom"
        android:layout_marginEnd="@dimen/fab_marginEnd"
        android:background="@drawable/bg_circle_button_start"
        android:text="@string/main_map_startExercise"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_map_stopRun"
        android:layout_width="@dimen/fab_size"
        android:layout_height="@dimen/fab_size"
        android:layout_marginBottom="@dimen/fab_marginSpace"
        android:background="@drawable/bg_circle_button_stop"
        android:text="@string/main_map_stopExercise"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_map_startRun"
        app:layout_constraintEnd_toEndOf="@+id/btn_map_startRun"
        app:layout_constraintStart_toStartOf="@+id/btn_map_startRun" />

</android.support.constraint.ConstraintLayout>